--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.duorourou</groupId>
     <artifactId>caffeine-cache-starter</artifactId>
-    <version>2.0.1-SNAPHOST</version>
+    <version>1.0.1.RELEASE</version>
     <name>caffeine-cache-starter</name>
     <description>A spring boot starter for using caffeinecache , Dev could easy to set the different cache specification for each cache.</description>
     <url>https://github.com/duorourou/caffeine-cache-starter</url>
@@ -13,7 +13,7 @@
         <springboot.version>2.3.1.RELEASE</springboot.version>
         <java.version>1.8</java.version>
         <lombok.version>1.18.12</lombok.version>
-        <reactor.version>3.3.6.RELEASE</reactor.version>
+        <reactor.version>3.3.7.RELEASE</reactor.version>
         <caffeine.version>2.8.5</caffeine.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -100,6 +100,19 @@
             <version>${reactor.version}</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${springboot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 
     <profiles>
         <profile>
